# skeletonide

./: CMakeLists.txt  README.md  main.cpp  spook.cpp
src/: pipeline.cpp
